# canvas-navbar

./: .gitignore  LICENSE  README.md  pyproject.toml
canvas_navbar/: __init__.py  __main__.py  canvas_api.py  cli.py  config.py  html_renderer.py  models.py  navigation.py  page_content.py  service.py
tests/: test_config_and_content.py  test_navigation.py  test_service.py
