[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-navbar"
version = "0.1.0"
description = "Canvas course navbar synchronizer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
include = ["canvas_navbar*"]
